<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/delete_background"
     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_dr_background"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete_dialog_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/deleteButton"
                style="@style/dr_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:background="@drawable/dr_delete_button_selector"
                android:minWidth="160dp"
                android:text="@string/yes_string" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/dr_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dr_delete_button_selector"
                android:minWidth="160dp"
                android:text="@string/no_string" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_dr_text" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/delete_string"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>